--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 		<script type="text/javascript" src="bower_components/fuelux/dist/js/fuelux.js"></script>
 		<script type="text/javascript" src="bower_components/techan/dist/techan.js"></script>
-		<script type="text/javascript" src="bower_components/techan/dist/techan.js.map"></script>
+		<script type="text/javascript" src="bower_components/techan/dist/techan.map.js"></script>
 		<script type="text/javascript" src="bower_components/async/lib/async.js"></script>
 		<script type="text/javascript" src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
 	<!-- Bower -->
@@ -28,6 +28,7 @@
 		<script type="text/javascript" src="js/randomcolor.js"></script>
 		<script type="text/javascript" src="js/data.js"></script>
 		<script type="text/javascript" src="js/chart.js"></script>
+		<script type="text/javascript" src="js/chart2.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	<!-- JS -->
 </head>
