added better plot control

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						</fieldset>
 					</div>
 					<div class="row container">
-						<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 well" id="ind-cnt"></div>
+						<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" id="ind-cnt"></div>
 					</div>	
 				</div>
 				<div class="modal-footer">
