--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 			<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
 			<link rel="stylesheet" type="text/css" href="bower_components/fuelux/dist/css/fuelux.css">
 			<link rel="stylesheet" type="text/css" href="bower_components/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css">
+			<link rel="stylesheet" type="text/css" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css">
+			<link rel="stylesheet" type="text/css" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css">
 		<!-- Bower -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/plot.css">
@@ -23,12 +25,14 @@
 		<script type="text/javascript" src="bower_components/async/lib/async.js"></script>
 		<script type="text/javascript" src="bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
 		<script type="text/javascript" src="bower_components/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script>
+		<script type="text/javascript" src="bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 	<!-- Bower -->
 	<!-- JS -->
 		<script type="text/javascript" src="js/memory.js"></script>
 		<script type="text/javascript" src="js/randomcolor.js"></script>
 		<script type="text/javascript" src="js/data.js"></script>
 		<script type="text/javascript" src="js/chart.js"></script>
+		<script type="text/javascript" src="js/ctrl.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	<!-- JS -->
 </head>
@@ -59,7 +63,38 @@
 				</div>
 				<div class="modal-body">
 					<div class="row">
-						
+						<h3>&nbsp;Settings</h3>
+						<hr>
+						<div class="row">
+							<div class="control-group col-xs-4 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-4 col-md-offset-1 col-lg-4 col-lg-offset-1">
+								<label class="control-label" for="selectmaintype">Select Main Type</label>
+								<div class="controls">
+									<div class="btn-group selectlist" data-resize="auto" data-initialize="selectlist" id="select-main-type">
+										<button class="btn btn-default dropdown-toggle " data-toggle="dropdown" type="button">
+											<span class="selected-label">Select Main Type</span>
+											<span class="caret"></span>
+											<span class="sr-only">Toggle Dropdown</span>
+										</button>
+										<ul class="dropdown-menu" role="menu">
+											<li data-value="Option one"><a href="#">Candlestick</a></li>
+											<li data-value="Option two"><a href="#">OHLC</a></li>
+											<li data-value="Option three"><a href="#">Line</a></li>
+										</ul>
+										<input class="hidden hidden-field" name="selectmaintype" readonly="readonly" aria-hidden="true" type="text">
+									</div>
+								</div>
+							</div>
+							<div class="control-group col-xs-6 col-sm-6 col-md-6 col-lg-6">
+								<label class="control-label" for="selectbasic">Select Dates</label>
+								<div class="control-group">
+									<div class="input-daterange input-group" id="datepicker">
+										<input type="text" class="input-sm form-control" name="start" />
+										<span class="input-group-addon">to</span>
+										<input type="text" class="input-sm form-control" name="end" />
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="row">
 						<h3>&nbsp;Indicator Add</h3>
