--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<!-- Bower -->
 	<!-- JS -->
 		<script type="text/javascript" src="js/memory.js"></script>
+		<script type="text/javascript" src="js/alert.js"></script>
 		<script type="text/javascript" src="js/randomcolor.js"></script>
 		<script type="text/javascript" src="js/data.js"></script>
 		<script type="text/javascript" src="js/chart.js"></script>
@@ -42,14 +43,26 @@
 		<span> Loading...</span>
 	</div>
 	<div class="col-lg-6 col-lg-offset-3 col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
-		<div class="input-group ticker-input">
-			<input type="text" class="form-control" placeholder="Ticker/Stock Name" id="ticker">
-			<span class="input-group-btn">
-				<button class="btn btn-default" type="button" id="ticker-change"><i class="glyphicon glyphicon-play"></i></button>
-				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#settings">
-				<i class="glyphicon glyphicon-cog"></i>
-				</button>
-			</span>
+		<div class="row">
+			<div class="input-group ticker-input">
+				<input type="text" class="form-control" placeholder="Ticker/Stock Name" id="ticker">
+				<span class="input-group-btn">
+					<button class="btn btn-default" type="button" id="ticker-change"><i class="glyphicon glyphicon-play"></i></button>
+					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#settings">
+					<i class="glyphicon glyphicon-cog"></i>
+					</button>
+				</span>
+			</div>
+		</div>
+		<div class="row">
+			<div class="input-group col-sm-6 col-md-6 col-lg-6">
+				<div class="alert alert-success popup-msg" role="alert">
+					<a href="#" class="alert-link"></a>
+				</div>
+				<div class="alert alert-danger popup-msg" role="alert">
+					<a href="#" class="alert-link"></a>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div id="chart">
@@ -76,9 +89,9 @@
 											<span class="sr-only">Toggle Dropdown</span>
 										</button>
 										<ul class="dropdown-menu" role="menu">
-											<li data-value="Option one"><a href="#">Candlestick</a></li>
-											<li data-value="Option two"><a href="#">OHLC</a></li>
-											<li data-value="Option three"><a href="#">Line</a></li>
+											<li data-value="candlestick"><a href="#">Candlestick</a></li>
+											<li data-value="ohlc"><a href="#">OHLC</a></li>
+											<li data-value="close"><a href="#">Line</a></li>
 										</ul>
 										<input class="hidden hidden-field" name="selectmaintype" readonly="readonly" aria-hidden="true" type="text">
 									</div>
@@ -88,9 +101,10 @@
 								<label class="control-label" for="selectbasic">Select Dates</label>
 								<div class="control-group">
 									<div class="input-daterange input-group" id="datepicker">
-										<input type="text" class="input-sm form-control" name="start" />
+										<span class="input-group-addon"> from</span>
+										<input type="text" class="input-sm form-control" id="from-date"/>
 										<span class="input-group-addon">to</span>
-										<input type="text" class="input-sm form-control" name="end" />
+										<input type="text" class="input-sm form-control" id="to-date"/>
 									</div>
 								</div>
 							</div>
@@ -110,8 +124,8 @@
 											<span class="sr-only">Toggle Dropdown</span>
 										</button>
 										<ul class="dropdown-menu" role="menu">
-											<li data-value="Option one"><a href="#"><strong>SMA</strong> - Simple Moving Average</a></li>
-											<li data-value="Option two"><a href="#"><strong>EMA</strong> - Exponential Moving Average</a></li>
+											<li data-value="sma"><a href="#"><strong>SMA</strong> - Simple Moving Average</a></li>
+											<li data-value="ema"><a href="#"><strong>EMA</strong> - Exponential Moving Average</a></li>
 										</ul>
 										<input class="hidden hidden-field" name="selectbasic" readonly="readonly" aria-hidden="true" type="text">
 									</div>
