--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 							<div class="control-group col-xs-2 col-xs-offset-1 col-sm-2 col-sm-offset-1 col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
 									<label class="control-label" for="Period">Period</label>
 									<div class="controls">
-										<div class="spinbox" data-initialize="spinbox">
-											<input class="form-control input-mini spinbox-input" value="15" id="periods" type="number">
+										<div>
+											<input class="form-control" value="15" id="periods" type="number">
 											<span class="help-block">Number of periods</span>
 										</div>
 									</div>
@@ -159,9 +159,6 @@
 						<hr>
 						<div style="overflow-y:scroll;height:25%" id="ind-cnt"></div>
 					</div>	
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
