--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<script type="text/javascript" src="bower_components/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
 	<!-- Bower -->
 	<!-- JS -->
+		<script type="text/javascript" src="js/sr-loader.js"></script>
 		<script type="text/javascript" src="js/memory.js"></script>
 		<script type="text/javascript" src="js/alert.js"></script>
 		<script type="text/javascript" src="js/randomcolor.js"></script>
